# ThesisPipelineRework

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md
data/normalized_114/: summary.json
data/normalized_114/by_package/114C__CREC-2015-01-07__unknown__EHS/: granule_committees.csv  granule_members.csv  granule_references.csv  granules_core.csv  package_meta.json
data/normalized_114/by_package/114C__CREC-2015-01-08__unknown__EHS/: granule_committees.csv  granule_members.csv  granule_references.csv  package_meta.json
data/normalized_114/by_package/114C__CREC-2015-01-09__unknown__EHS/: granule_committees.csv  granule_members.csv  granule_references.csv  granules_core.csv  (+1 more)
interest_group_analysis/: __init__.py  config.py  pipelines.py
interest_group_analysis/1.data_collection/: 1.govinfo.py  2.bill_metadata.py  3.congress_members.py  4.policy_salience.py  5.interest_group_prep.py  __init__.py
interest_group_analysis/2.data_processing/: 1.process_and_normalize.py  2.mentions_postprocess.py  3.mention_extraction.py  __init__.py  utils.py
interest_group_analysis/3.classification/: __init__.py  text_classifier.py
interest_group_analysis/4. integration/: __init__.py  merge_datasets.py
interest_group_analysis/5. analysis/: __init__.py  regression.py  visualizations.py
interest_group_analysis/data/: interest_groups_list.csv
interest_group_analysis/utils/: __init__.py  file_io.py
results/: README.md
scripts/: 1.collect_govinfo.py  2.normalize_govinfo.py  3.extract_mentions.py
(+1311 files in other folders)
